<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_server_address"
        android:inputType="textCapWords"
        android:key="@string/pref_key_server_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_address" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_login"
        android:inputType="textCapWords"
        android:key="@string/pref_key_login"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_login" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textPassword"
        android:key="@string/pref_key_password"
        android:maxLines="1"
        android:password="true"
        android:selectAllOnFocus="true"
        android:imeOptions="flagNoExtractUi"
        android:singleLine="true"
        android:title="@string/pref_title_password" />

</PreferenceScreen>
